fix text alignment in header before merge with master

--- a/public/styles.css
+++ b/public/styles.css
@@ -68,6 +68,7 @@ h2 {
   padding: 1em .25em;
   margin-top: 50px;
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   color: #E5E5E5 !important;
